--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/supabase-js": "^2.80.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
     "@vis.gl/react-google-maps": "^1.7.1",
     "astro": "^5.15.4",
     "clsx": "^2.1.1",
@@ -43,6 +41,9 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "astro-compress": "^2.3.8",
@@ -52,7 +53,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "3.4.17",
     "typescript": "^5.9.3"
   }
 }
