--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@astrojs/react": "^4.4.2",
     "@astrojs/tailwind": "^6.0.2",
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "3.9.1",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -35,10 +35,10 @@
     "react": "^19.2.0",
     "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.0",
+    "react-hook-form": "7.53.0",
     "resend": "^6.4.2",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
