feat: constantes del proyecto

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# .env.example (SÍ SUBIR A GIT como plantilla)
+# ============================================
+# LA RESERVA - EJEMPLO DE VARIABLES DE ENTORNO
+# Copia este archivo a .env y completa los valores
+# ============================================
 
 # Supabase
 SUPABASE_URL=https://tu-proyecto.supabase.co
