--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^19.2.2",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.2.2",
     "astro-compress": "^2.3.8",
     "astro-seo": "^0.8.4",
