--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.80.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "astro": "^5.15.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "nanoid": "^5.1.6",
@@ -40,11 +43,13 @@
     "react-hook-form": "7.69.0",
     "resend": "^6.4.2",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "4.2.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.2.7",
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-dom": "^19.2.3",
