solución de warning de pnpm en vercel

--- a/package.json
+++ b/package.json
@@ -63,5 +63,11 @@
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "3.4.17",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   }
 }
