--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@vis.gl/react-google-maps": "^1.7.1",
     "astro": "^5.15.4",
+    "buffer": "^6.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
